string defined by the new variable `query-replace-from-to-separator'.
To select a prior replacement, type `M-p' until the desired
replacement appears in the minibuffer, and then exit the minibuffer by
typing RET.

** Calc
+++
*** If `quick-calc' is called with a prefix argument, insert the
result of the calculation into the current buffer.

** ElDoc
*** New minor mode global-eldoc-mode
*** eldoc-documentation-function now defaults to nil

** eww

+++
*** A new command `R' (`eww-readable') will try do identify the main
textual parts of a web page and display only that, leaving menus and
the like off the page.

---
*** You can now use several eww buffers in parallel by renaming eww
buffers you want to keep separate.

+++
*** Partial state of the eww buffers (the URIs and the titles of the
pages visited) is now preserved in the desktop file.

+++
*** `eww-after-render-hook' is now called after eww has rendered
the data in the buffer.

---
*** The `eww-reload' command now takes a prefix to not reload via
the net, but just use the local copy of the HTML.

+++
*** The DOM shr and eww uses has been changed to the general Emacs
xml.el/libxml2 DOM, and a new package dom.el has been added to
interact with this DOM.  See the Emacs Lisp manual for interface
details.

+++
*** `mailcap-mime-data' is now consulted when displaying PDF files.

+++
*** The new `S' command will list all eww buffers, and allow managing
them.

---
*** https pages with valid certificates have headers marked in green, while
invalid certificates are marked in red.

** Message mode

*** text/html messages that contain inline image parts will be
transformed into multipart/related messages before sending.

** pcase
*** New UPatterns `quote' and `app'.
*** New UPatterns can be defined with `pcase-defmacro'.
+++
*** New vector QPattern.

** Lisp mode
*** Strings after `:documentation' are highlighted as docstrings.

** Rectangle editing